[gd_scene load_steps=14 format=3 uid="uid://bdj5hjv8ghkt6"]

[ext_resource type="Texture2D" uid="uid://d17c2jluxygi5" path="res://Interactables/TreasureChest/treasure-chest.png" id="1_4psg3"]
[ext_resource type="Script" uid="uid://d31eany5ncgwe" path="res://Interactables/TreasureChest/treasure_chest.gd" id="1_km1n8"]
[ext_resource type="Texture2D" uid="uid://c2lflffb1ul0y" path="res://Items/sprites/items.png" id="2_tln0u"]
[ext_resource type="AudioStream" uid="uid://bp7f4emaawqkg" path="res://Interactables/TreasureChest/treasure-open.wav" id="3_e0gtp"]
[ext_resource type="PackedScene" uid="uid://drhvdfa1u788q" path="res://GeneralNodes/PersistentDataHandler/persistent_data_handler.tscn" id="5_dhxp7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0gtp"]
atlas = ExtResource("2_tln0u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_e0gtp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreasureChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tln0u"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreasureChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dhxp7"]
resource_name = "open_chest"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreasureChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_e0gtp")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.5),
"transitions": PackedFloat32Array(0.5, -2, 2, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -60), Vector2(0, -48), Vector2(0, -48)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_km1n8"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreasureChestSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhxp7"]
_data = {
&"RESET": SubResource("Animation_e0gtp"),
&"closed": SubResource("Animation_tln0u"),
&"open_chest": SubResource("Animation_dhxp7"),
&"opened": SubResource("Animation_km1n8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km1n8"]
size = Vector2(32, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tln0u"]
size = Vector2(36, 20)

[node name="TreasureChest" type="Node2D"]
process_mode = 3
script = ExtResource("1_km1n8")

[node name="TreasureChestSprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("1_4psg3")
hframes = 2

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = SubResource("AtlasTexture_e0gtp")

[node name="Label" type="Label" parent="ItemSprite"]
offset_left = 1.0
offset_top = -7.0
offset_right = 41.0
offset_bottom = 16.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dhxp7")
}
autoplay = "closed"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_km1n8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_tln0u")

[node name="PersistentDataIsOpen" parent="." instance=ExtResource("5_dhxp7")]
